cmake_minimum_required(VERSION 3.0)

project(ogl_to_vlk)

add_subdirectory(prebuilt)
add_subdirectory(platform)
add_subdirectory(sc)
add_subdirectory(chapter0)
add_subdirectory(chapter1)
add_subdirectory(chapter2)
add_subdirectory(chapter3)
add_subdirectory(chapter4)
add_subdirectory(chapter5)
add_subdirectory(chapter6)
add_subdirectory(chapter7)
add_subdirectory(chapter8)
add_subdirectory(chapter9)
add_subdirectory(chapter10)
add_subdirectory(chapter11)
add_subdirectory(chapter12)
